tests/baselines/reference/importStatementsInterfaces.errors.txt
importStatementsInterfaces.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
importStatementsInterfaces.ts(7,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
importStatementsInterfaces.ts(15,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
importStatementsInterfaces.ts(20,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
importStatementsInterfaces.ts(23,19): error TS2708: Cannot use namespace 'a' as a value.
importStatementsInterfaces.ts(29,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
importStatementsInterfaces.ts(36,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== importStatementsInterfaces.ts (7 errors) ====
    module A {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export interface Point {
            x: number;
            y: number;
        }
    
        export module inA {
                      ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            export interface Point3D extends Point {
                z: number;
            }
        }
    }
    
    // no code gen expected
    module B {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        import a = A;
    }
    
    // no code gen expected
    module C {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        import a = A;
        import b = a.inA;
        var m: typeof a;
                      ~
!!! error TS2708: Cannot use namespace 'a' as a value.
        var p: b.Point3D;
        var p = {x:0, y:0, z: 0 };
    }
    
    // no code gen expected
    module D {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        import a = A;
    
        var p : a.Point;
    }
    
    // no code gen expected
    module E {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        import a = A.inA;
        export function xDist(x: a.Point3D) {
            return 0 - x.x;
        }
    }